Prepare for release
Prepares codebase for release v0.1.2

Sets up CI/CD workflows and documentation for the upcoming release.

This commit introduces:
- CI/CD workflows for automated testing, linting, building, and releasing binaries.
- GitHub Pages deployment for documentation updates.
- Ecosystem configuration file support, enabling management of multiple applications via JSON, YAML, or TOML.
- Cross-platform support, ensuring native functionality on Linux, Windows, and macOS.
- Refactors project structure and dependencies for cross-platform compatibility.

--- a/docs/changelog/2025-05-25-v0.1.0.md
+++ b/docs/changelog/2025-05-25-v0.1.0.md
@@ -1,7 +1,7 @@
 ---
 slug: v0.1.0
 title: PMDaemon v0.1.0 - Initial Release
-authors: [pmdaemon]
+authors: [shawn]
 tags: [release, initial, process-manager, rust, pm2]
 date: 2025-05-25
 ---
@@ -9,6 +9,8 @@ date: 2025-05-25
 # PMDaemon v0.1.0 - Initial Release
 
 We're thrilled to announce the initial release of PMDaemon, a high-performance process manager built in Rust that takes inspiration from PM2 while adding innovative features that exceed the original.
+
+<!-- truncate -->
 
 ## 🎯 Why PMDaemon?
 
