--- a/docs/changelog/2025-05-26-v0.1.1.md
+++ b/docs/changelog/2025-05-26-v0.1.1.md
@@ -1,7 +1,7 @@
 ---
 slug: v0.1.1
 title: PMDaemon v0.1.1 - Enhanced Delete Operations, Health Checks & Monitoring
-authors: [pmdaemon]
+authors: [shawn]
 tags: [release, health-checks, monitoring, delete-operations, testing]
 date: 2025-05-26
 ---
@@ -9,6 +9,8 @@ date: 2025-05-26
 # PMDaemon v0.1.1 - Enhanced Delete Operations, Health Checks & Monitoring
 
 We're excited to announce PMDaemon v0.1.1, a significant update that brings powerful new features for production environments, enhanced safety mechanisms, and comprehensive health monitoring capabilities.
+
+<!-- truncate -->
 
 ## 🚀 Major New Features
 
