--- a/docs/changelog/2025-05-27-v0.1.2.md
+++ b/docs/changelog/2025-05-27-v0.1.2.md
@@ -26,6 +26,8 @@ This release represents two major milestones: **ecosystem configuration support*
 - **Comprehensive Field Support** - All process options configurable via files
 - **Environment-Specific Configs** - Separate config files for different environments
 - **Validation & Error Handling** - Detailed error messages for configuration issues
+- **Custom Configuration Directory** - `PM2R_HOME` environment variable support for configuration directory override
+- **Multi-Instance Support** - Better support for running multiple isolated PMDaemon instances
 
 ### 🌍 Cross-Platform Support
 - **Native Windows Support** - Full functionality on Windows 10/11 with optimized process management
@@ -65,6 +67,19 @@ pmdaemon --config ecosystem.json start
 pmdaemon --config ecosystem.json start --name web-server
 ```
 
+### Environment Variable Configuration
+
+**Custom Configuration Directory:**
+```bash
+# Use custom config directory
+export PM2R_HOME="/path/to/custom/config"
+pmdaemon start "node server.js" --name web-app
+
+# Multiple isolated instances
+PM2R_HOME="/tmp/instance1" pmdaemon start app1.js --name app1
+PM2R_HOME="/tmp/instance2" pmdaemon start app2.js --name app2
+```
+
 ### Cross-Platform Installation
 
 **Pre-built Binaries:**
@@ -102,6 +117,8 @@ PMDaemon v0.1.2 now matches and exceeds PM2's capabilities across all platforms:
 | Auto port assignment   | ✅              | ❌  |
 | Built-in health checks | ✅              | ❌  |
 | Configuration validation| ✅              | ❌  |
+| Custom config directory | ✅ (PM2R_HOME)  | ❌  |
+| Multi-instance isolation| ✅              | ❌  |
 
 ## 📚 Migration from PM2
 
@@ -133,8 +150,8 @@ module.exports = {
 ## 🔗 Resources
 
 - **[Configuration Guide](/docs/configuration/ecosystem-files)** - Complete ecosystem config documentation
-- **[Examples](/docs/examples/use-cases)** - Real-world configuration examples
-- **[Migration Guide](/docs/getting-started/migration-from-pm2)** - Step-by-step PM2 migration
+- **[Examples](/docs/examples/ecosystem-configs)** - Real-world configuration examples
+- **[Migration Guide](/docs/comparison/migration-from-pm2)** - Step-by-step PM2 migration
 
 ---
 
