Renames config dir env var to PMDAEMON_HOME and config directory name to .pmdaemon
Updates the old environment variable name used to override the default configuration directory from `PM2R_HOME` to `PMDAEMON_HOME`.

This change aligns the environment variable name with the project name and ensures consistency across the codebase, documentation, and examples.

--- a/docs/changelog/2025-05-27-v0.1.2.md
+++ b/docs/changelog/2025-05-27-v0.1.2.md
@@ -26,7 +26,7 @@ This release represents two major milestones: **ecosystem configuration support*
 - **Comprehensive Field Support** - All process options configurable via files
 - **Environment-Specific Configs** - Separate config files for different environments
 - **Validation & Error Handling** - Detailed error messages for configuration issues
-- **Custom Configuration Directory** - `PM2R_HOME` environment variable support for configuration directory override
+- **Custom Configuration Directory** - `PMDAEMON_HOME` environment variable support for configuration directory override
 - **Multi-Instance Support** - Better support for running multiple isolated PMDaemon instances
 
 ### 🌍 Cross-Platform Support
@@ -72,12 +72,12 @@ pmdaemon --config ecosystem.json start --name web-server
 **Custom Configuration Directory:**
 ```bash
 # Use custom config directory
-export PM2R_HOME="/path/to/custom/config"
+export PMDAEMON_HOME="/path/to/custom/config"
 pmdaemon start "node server.js" --name web-app
 
 # Multiple isolated instances
-PM2R_HOME="/tmp/instance1" pmdaemon start app1.js --name app1
-PM2R_HOME="/tmp/instance2" pmdaemon start app2.js --name app2
+PMDAEMON_HOME="/tmp/instance1" pmdaemon start app1.js --name app1
+PMDAEMON_HOME="/tmp/instance2" pmdaemon start app2.js --name app2
 ```
 
 ### Cross-Platform Installation
@@ -117,7 +117,7 @@ PMDaemon v0.1.2 now matches and exceeds PM2's capabilities across all platforms:
 | Auto port assignment   | ✅              | ❌  |
 | Built-in health checks | ✅              | ❌  |
 | Configuration validation| ✅              | ❌  |
-| Custom config directory | ✅ (PM2R_HOME)  | ❌  |
+| Custom config directory | ✅ (PMDAEMON_HOME)  | ❌  |
 | Multi-instance isolation| ✅              | ❌  |
 
 ## 📚 Migration from PM2
