Fix broken documentation links in changelog
Remove non-existent documentation links that were causing build failures.
Keep only working links to existing pages.

--- a/docs/changelog/2025-05-27-v0.1.2.md
+++ b/docs/changelog/2025-05-27-v0.1.2.md
@@ -150,8 +150,7 @@ module.exports = {
 ## 🔗 Resources
 
 - **[Configuration Guide](/docs/configuration/ecosystem-files)** - Complete ecosystem config documentation
-- **[Examples](/docs/examples/ecosystem-configs)** - Real-world configuration examples
-- **[Migration Guide](/docs/comparison/migration-from-pm2)** - Step-by-step PM2 migration
+- **[GitHub Repository](https://github.com/entrepeneur4lyf/pmdaemon)** - Source code and examples
 
 ---
 
