Updates configuration guide link
Updates the configuration guide link to point to the externally hosted documentation.

--- a/docs/changelog/2025-05-27-v0.1.2.md
+++ b/docs/changelog/2025-05-27-v0.1.2.md
@@ -149,7 +149,7 @@ module.exports = {
 
 ## 🔗 Resources
 
-- **[Configuration Guide](/docs/configuration/ecosystem-files)** - Complete ecosystem config documentation
+- **[Configuration Guide](https://entrepeneur4lyf.github.io/pmdaemon/docs/configuration/ecosystem-files)** - Complete ecosystem config documentation
 - **[GitHub Repository](https://github.com/entrepeneur4lyf/pmdaemon)** - Source code and examples
 
 ---
